--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,8 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
 
+    useLibrary 'org.apache.http.legacy'
+
     defaultConfig {
         applicationId "com.example.dmitry.artistshower"
         minSdkVersion 15
@@ -29,4 +31,6 @@ dependencies {
     provided 'org.glassfish:javax.annotation:10.0-b28'
     apt "com.google.dagger:dagger-compiler:2.0.1"
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.android.support:cardview-v7:23.2.1'
+
 }
