--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     apt "com.google.dagger:dagger-compiler:2.0.1"
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:cardview-v7:23.2.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 
 }
